--- a/inotechmember.html
+++ b/inotechmember.html
@@ -13,13 +13,13 @@
     <header>
       <nav class="navbar">
         <a class="logo" href="#">Inotech<span>.</span></a>
-         <ul class="menu-links">
+            <ul class="menu-links">
           <span id="close-menu-btn" class="material-symbols-outlined">close</span>
           <li><a href="index.html">Home</a></li>
           <li><a href="infosiliconisland.html">Info</a></li>
+          <li><a href="inotechmodel.html">3D Design</a></li>
           <li><a href="inotechmember.html">Project Member</a></li>
           <li><a href="inotechsurvey.html">Survey</a></li>
-        
         </ul>
         <span id="hamburger-btn" class="material-symbols-outlined">menu</span>
       </nav>
