--- a/inotechmodel.html
+++ b/inotechmodel.html
@@ -15,6 +15,8 @@
         align-items: center;
         width: 100%;
         height: 100vh; /* Full viewport height */
+        margin: 0;
+        padding: 0;
       }
 
       /* Make the iframe responsive */
@@ -22,6 +24,7 @@
         width: 80%; /* Adjust as needed */
         max-width: 1000px; /* Maximum width */
         height: 500px; /* Fixed height */
+        border: none; /* Remove iframe border */
       }
     </style>
   </head>
@@ -43,7 +46,10 @@
 
     <!-- Centered 3D Model -->
     <div class="sketchfab-embed-wrapper">
-      <iframe title="Siliconisland" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="1000" height="500" src="https://sketchfab.com/models/0720737dda8b434e8c83f575d6723631/embed"></iframe>
+      <iframe title="komtar 2.0" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/f17cc2f3244f407d967c599df23b792e/embed"></iframe>
+      <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
+        <a href="https://sketchfab.com/3d-models/komtar-20-f17cc2f3244f407d967c599df23b792e?utm_medium=embed&utm_campaign=share-popup&utm_content=f17cc2f3244f407d967c599df23b792e" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">komtar 2.0</a> by <a href="https://sketchfab.com/inotechclan?utm_medium=embed&utm_campaign=share-popup&utm_content=f17cc2f3244f407d967c599df23b792e" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">inotechclan</a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=f17cc2f3244f407d967c599df23b792e" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+      </p>
     </div>
 
     <script>
