--- a/inotechmodel.html
+++ b/inotechmodel.html
@@ -43,7 +43,7 @@
 
     <!-- Centered 3D Model -->
     <div class="sketchfab-embed-wrapper">
-       <iframe title="komtar 2.0" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="1000" height="500" src="https://sketchfab.com/models/f17cc2f3244f407d967c599df23b792e/embed"></iframe>
+       <iframe title="SILICOND ISLAND 2.0" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share width="1000" height="500" src="https://sketchfab.com/models/8c89558b34704407b7b58c9e93c31392/embed"> </iframe> 
     </div>
 
     <script>
